--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@algolia/client-search": "^5.20.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
@@ -18,14 +19,18 @@
     "@stackframe/stack": "^2.7.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "instantsearch.js": "^4.77.3",
     "lucide-react": "^0.475.0",
     "next": "^15.1.7",
     "next-themes": "^0.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-instantsearch": "^7.15.3",
+    "react-instantsearch-hooks-web": "^6.47.3",
     "recharts": "^2.15.1",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "typesense-instantsearch-adapter": "^2.8.0"
   },
   "devDependencies": {
     "@types/node": "^20",
